--- a/5ch.html
+++ b/5ch.html
@@ -1022,6 +1022,8 @@
         <a href="https://hayabusa9.5ch.net/hayabusa9tr/">歳納京子</a>
         <br><br><b>隔離</b><br>
         <a href="https://agree.5ch.net/mango/">MANGO</a>
+        <br><br><b>隠し板</b><br>
+        <a href="https://egg.5ch.net/wall/">壁</a><br>
     </span>
 </body>
 
